feat: add trip place selections
